<resources>
    <string name="app_name">Medify</string>
    <string name="title_activity_login">LoginActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="email_hint"><b>Enter your email</b></string>
    <string name="pass_hint"><b>Enter your password</b></string>
    <string name="name_hint"><b>Enter your username</b></string>
    <string name="dob_hint"><b>Enter your date of birth</b></string>
    <string name="signupbutoon"><b><u>Signup</u></b></string>
    <string name="loginbutoon"><b><u>Login</u></b></string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>