<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="#5c3423">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="20dp"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_launcher_foreground"
                android:scaleX="1.5"
                android:scaleY="1.5"
                android:paddingRight="20dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Medify"
                android:textSize="40sp"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="600dp"
            android:layout_marginTop="150dp"
            android:background="@drawable/signuppshadow">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/source_sans"
                    android:letterSpacing="0.13"
                    android:paddingTop="20dp"
                    android:text="Signup"
                    android:textColor="@color/black"
                    android:textSize="40sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="12dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/signupbg">
                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/sentry"
                        android:paddingBottom="10dp"
                        >
                        <EditText
                            android:paddingHorizontal="20dp"
                            android:paddingVertical="5dp"
                            android:id="@+id/name_signup"
                            android:layout_width="320dp"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:hint="@string/name_hint"
                            android:inputType="textPersonName"
                            android:minHeight="48dp"
                            android:paddingLeft="8dp"
                            android:textSize="20sp"
                            tools:layout_editor_absoluteX="100dp" />
                    </FrameLayout>
                </FrameLayout>
                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="12dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/signupbg">
                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/sentry"
                        android:paddingBottom="10dp"
                        >

                        <EditText
                            android:paddingHorizontal="20dp"
                            android:paddingVertical="5dp"
                            android:id="@+id/email_signup"
                            android:layout_width="320dp"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:hint="@string/email_hint"
                            android:inputType="textEmailAddress"
                            android:minHeight="48dp"
                            android:paddingLeft="8dp"
                            android:textSize="20sp"
                            tools:layout_editor_absoluteX="100dp" />
                    </FrameLayout>
                </FrameLayout><FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="12dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/signupbg">
                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/sentry"
                        android:paddingBottom="10dp"
                        >

                        <EditText
                            android:paddingHorizontal="20dp"
                            android:paddingVertical="5dp"
                            android:id="@+id/dob_signup"
                            android:layout_width="320dp"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:hint="@string/dob_hint"
                            android:inputType="date"
                            android:minHeight="48dp"
                            android:paddingLeft="8dp"
                            android:textSize="20sp"
                            tools:layout_editor_absoluteX="100dp" />
                    </FrameLayout>
                </FrameLayout>
                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="12dp"
                    android:background="@drawable/signupbg"
                    android:layout_marginTop="5dp">
                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/sentry"
                        android:paddingBottom="10dp"
                        >

                        <EditText
                            android:paddingHorizontal="20dp"
                            android:paddingVertical="5dp"
                            android:id="@+id/password_signup"
                            android:layout_width="320dp"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:hint="@string/pass_hint"
                            android:inputType="textPassword"
                            android:minHeight="48dp"
                            android:paddingLeft="8dp"
                            android:textSize="20sp"
                            tools:layout_editor_absoluteX="100dp" />
                    </FrameLayout>
                </FrameLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/signupbg"
                    android:paddingTop="0dp"
                    android:paddingBottom="0dp"
                    android:layout_marginTop="10dp"
                    >
                    <Button
                        android:id="@+id/signupbutton"
                        android:onClick="onSignup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="25dp"
                        android:text="Signup"
                        android:textFontWeight="800"
                        android:fontFamily="@font/source_sans"
                        android:textAllCaps="false"
                        android:textSize="23sp"
                        android:backgroundTint="#00000000"
                        android:background="#00000000"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Already have an account"
                        android:textSize="18sp"
                        android:fontFamily="@font/source_sans"
                        android:textColor="#7d372d"/>
                    <TextView
                        android:id="@+id/to_log"
                        android:textAllCaps="false"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/loginbutoon"
                        android:clickable="true"
                        android:textSize="18sp"
                        android:fontFamily="@font/source_sans"
                        android:backgroundTint="#00000000"
                        android:background="#00000000"
                        android:textColor="#7d372d"/>
                </LinearLayout>
            </LinearLayout>
        </FrameLayout>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>